Create placeholder pages for the two apps.

--- a/index.html
+++ b/index.html
@@ -287,24 +287,24 @@
                     data-aos="fade-up"
                     data-aos-delay="100"
                 >
-                    <h3>Xero Connector</h3>
+                    <h3>x.ink – Xero Syncs</h3>
                     <p>
                         Sync orders, invoices and payments to Xero in real time,
                         no manual exports required.
                     </p>
-                    <a href="#" class="learn-more">Learn More</a>
+                    <a href="/xink/" class="learn-more">Learn More</a>
                 </div>
                 <div
                     class="app-card auspost"
                     data-aos="fade-up"
                     data-aos-delay="200"
                 >
-                    <h3>Australia Post Connector</h3>
+                    <h3>ausp.ink - Australia Post Exports</h3>
                     <p>
                         Easily exports orders from Shopify to Australia Post,
                         built to work with every MyPost Business account.
                     </p>
-                    <a href="#" class="learn-more">Learn More</a>
+                    <a href="/auspink/" class="learn-more">Learn More</a>
                 </div>
             </div>
         </section>
