--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Ink Apps • Simplify Your Shopify Integrations</title>
         <!-- Favicon -->
-        <link rel="icon" href="ink.apps mark.png" type="image/png" />
+        <link rel="icon" href="mark.png" type="image/png" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -17,239 +17,7 @@
             href="https://unpkg.com/aos@2.3.1/dist/aos.css"
             rel="stylesheet"
         />
-        <style>
-            /* CSS Variables */
-            :root {
-                --brand-color: #002c45;
-                --brand-dark: #001f30;
-            }
-
-            /* Reset & Base */
-            * {
-                margin: 0;
-                padding: 0;
-                box-sizing: border-box;
-            }
-            body {
-                font-family: "Inter", sans-serif;
-                line-height: 1.6;
-                color: #333;
-            }
-            a {
-                text-decoration: none;
-            }
-            ul {
-                list-style: none;
-            }
-
-            /* Container */
-            .container {
-                max-width: 1000px;
-                margin: 0 auto;
-                padding: 0 1rem;
-            }
-
-            /* Header */
-            header.container {
-                padding: 1rem 0;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-            }
-            .logo img {
-                max-height: 80px;
-            }
-            nav ul {
-                display: flex;
-                gap: 2rem;
-            }
-            nav a {
-                font-size: 1.1rem;
-                font-weight: 600;
-                color: #555;
-                transition: color 0.3s;
-            }
-            nav a:hover {
-                color: var(--brand-color);
-            }
-
-            /* Hero with Full-Width Background */
-            .hero {
-                position: relative;
-                width: 100%;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: flex-start;
-                min-height: 64vh; /* Reduced height by ~20% */
-                color: #fff;
-                background: url("hero-bg.jpg") no-repeat center/cover;
-            }
-            .hero::after {
-                content: "";
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background: rgba(0, 44, 69, 0.6);
-                z-index: 0;
-            }
-            .hero .container {
-                position: relative;
-                z-index: 1;
-            }
-            .hero h1 {
-                font-size: 3rem;
-                margin-bottom: 1rem;
-            }
-            .hero p {
-                font-size: 1.25rem;
-                margin-bottom: 2rem;
-                max-width: 600px;
-            }
-
-            /* Buttons */
-            .btn {
-                display: inline-block;
-                background: var(--brand-color);
-                color: #fff;
-                padding: 0.75rem 1.5rem;
-                border-radius: 4px;
-                font-weight: 600;
-                transition: background 0.3s;
-            }
-            .btn:hover {
-                background: var(--brand-dark);
-            }
-            .learn-more {
-                display: inline-block;
-                margin-top: 1rem;
-                font-size: 0.9rem;
-                background: var(--brand-color);
-                color: #fff;
-                padding: 0.5rem 1rem;
-                border-radius: 4px;
-                border: none;
-                transition: background 0.3s;
-            }
-            .learn-more:hover {
-                background: var(--brand-dark);
-            }
-
-            /* Principles Intro */
-            .principles {
-                width: 100%;
-                background: #f9f9f9;
-            }
-            .principles .container {
-                padding: 4rem 0;
-                text-align: center;
-            }
-            .principles h2 {
-                font-size: 2rem;
-                color: var(--brand-color);
-                margin-bottom: 1rem;
-            }
-            .principles p {
-                font-size: 1.125rem;
-                max-width: 700px;
-                margin: 0 auto;
-            }
-
-            /* Apps Section */
-            .apps {
-                width: 100%;
-            }
-            .apps .container {
-                padding: 4rem 0;
-                display: grid;
-                grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-                gap: 2rem;
-                justify-content: center;
-            }
-            .app-card {
-                position: relative;
-                overflow: hidden;
-                padding: 1.5rem;
-                border-radius: 8px;
-                background: #fff;
-                text-align: center;
-                box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-            }
-            .app-card h3 {
-                color: var(--brand-color);
-                margin-bottom: 0.5rem;
-                font-size: 1.5rem;
-            }
-            .app-card p {
-                margin-bottom: 1rem;
-            }
-            .app-card.xero::before,
-            .app-card.auspost::before {
-                content: "";
-                position: absolute;
-                top: -20px;
-                left: -20px;
-                width: 180px; /* Increased by 1.5x */
-                height: 180px; /* Increased by 1.5x */
-                background-repeat: no-repeat;
-                background-size: contain;
-                opacity: 0.1;
-                z-index: 0;
-            }
-            .app-card.xero::before {
-                background-image: url("xink-mark.png");
-            }
-            .app-card.auspost::before {
-                background-image: url("auspink-mark.png");
-            }
-            .app-card * {
-                position: relative;
-                z-index: 1;
-            }
-
-            /* About */
-            .about {
-                display: flex;
-                flex-wrap: wrap;
-                align-items: center;
-                gap: 2rem;
-                padding: 2rem 0;
-            }
-            .about .illustration {
-                flex: 0 0 250px;
-            }
-            .about .illustration img {
-                max-width: 100%;
-            }
-            .about .text {
-                flex: 1;
-            }
-
-            /* CTA */
-            .cta {
-                background: var(--brand-color);
-                color: #fff;
-                text-align: center;
-                padding: 3rem 1rem;
-                border-radius: 8px;
-            }
-            .cta h2 {
-                font-size: 2rem;
-            }
-            .cta .btn {
-                margin-top: 1rem;
-            }
-
-            /* Footer */
-            footer {
-                text-align: center;
-                padding: 2rem 0;
-                font-size: 0.875rem;
-                color: #777;
-            }
-        </style>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <header class="container" data-aos="fade-down">
@@ -258,9 +26,17 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#apps">Our Apps</a></li>
+                    <li class="dropdown">
+                        <a href="#apps"
+                            >Our Apps
+                            <span style="font-size: 0.7em">&#9662;</span></a
+                        >
+                        <ul class="dropdown-menu">
+                            <li><a href="/auspink/">ausp.ink</a></li>
+                            <li><a href="/xink">x.ink</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
