Create the project page for auspink.

--- a/auspink/index.html
+++ b/auspink/index.html
@@ -1,1 +1,78 @@
-ausp.ink
+---
+title: ausp.ink • Hassle-Free Australia Post Exports • Ink Apps
+layout: default
+---
+
+<section class="xink-hero">
+    <img
+        src="/images/auspink-logo.png"
+        alt="ausp.ink Logo"
+        data-aos="fade-up"
+    />
+</section>
+
+<section class="features">
+    <h2 data-aos="fade-down">Main Features</h2>
+    <div class="features-grid">
+        <div class="feature-card" data-aos="fade-up" data-aos-delay="100">
+            <h3>Seamless AusPost Export</h3>
+            <p>Easily exports orders from Shopify to Australia Post.</p>
+        </div>
+        <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
+            <h3>Small Business Ready</h3>
+            <p>
+                Works with every MyPost account, no need for the enterprise
+                plan.
+            </p>
+        </div>
+        <div class="feature-card" data-aos="fade-up" data-aos-delay="300">
+            <h3>Easy Configuration</h3>
+            <p>
+                Set up parcels you use regularly, and choose them during export.
+            </p>
+        </div>
+        <div class="feature-card" data-aos="fade-up" data-aos-delay="500">
+            <h3>Bulk Import in AusPost</h3>
+            <p>
+                Download a CSV file ready to be bulk imported into Australia
+                Post.
+            </p>
+        </div>
+        <div class="feature-card" data-aos="fade-up" data-aos-delay="400">
+            <h3>Fulfill Orders</h3>
+            <p>
+                After creating shipping labels, easily fulfill all exported
+                orders in the app.
+            </p>
+        </div>
+    </div>
+</section>
+
+<section class="getting-started">
+    <h2 data-aos="fade-down">How to Get Started</h2>
+    <ol>
+        <li data-aos="fade-left" data-aos-delay="100">
+            <strong>Install:</strong> Find ausp.ink in the Shopify App Store and
+            click install.
+        </li>
+        <li data-aos="fade-left" data-aos-delay="300">
+            <strong>Configure:</strong> Set up your business details and
+            parcels.
+        </li>
+        <li data-aos="fade-left" data-aos-delay="200">
+            <strong>Export:</strong> Export orders directly from your Shopify
+            orders list.
+        </li>
+        <li data-aos="fade-left" data-aos-delay="400">
+            <strong>Import:</strong> Import your configured shipments into
+            Australia Post and generate labels.
+        </li>
+        <li data-aos="fade-left" data-aos-delay="400">
+            <strong>Fulfill:</strong> Fulfill all exported orders in the
+            ausp.ink app.
+        </li>
+    </ol>
+    <div class="cta-button" data-aos="fade-up" data-aos-delay="600">
+        <a href="/auspink/getting-started" class="btn">Learn More</a>
+    </div>
+</section>
