Add a FAQ page and some easier navigation to the application page.

--- a/xink/getting-started/index.html
+++ b/xink/getting-started/index.html
@@ -3,8 +3,10 @@ title: Getting Started • x.ink • Ink Apps
 layout: default
 ---
 
-<section class="xink-hero">
-    <img src="/images/xink-logo.png" alt="x.ink Logo" data-aos="fade-up" />
+<section class="xink-hero-with-title">
+    <img src="/images/xink-logo.png" alt="x.ink Logo" />
+    <h1>x.ink – Getting Started</h1>
+    <p>Follow these simple steps to connect your Shopify store to Xero</p>
 </section>
 
 <section class="features">
