Finalise the x.ink FAQ section.

--- a/xink/index.html
+++ b/xink/index.html
@@ -4,7 +4,7 @@ layout: default
 ---
 
 <section class="xink-hero">
-    <img src="/images/xink-logo.png" alt="x.ink Logo" data-aos="fade-up" />
+    <img src="/images/xink-mark.png" alt="x.ink Logo" data-aos="fade-up" />
 </section>
 
 <section class="features">
