--- a/xink/faq/index.html
+++ b/xink/faq/index.html
@@ -4,31 +4,192 @@ layout: default
 ---
 
 <section class="xink-hero-with-title">
-    <img src="/images/xink-logo.png" alt="x.ink Logo" />
-    <h1>x.ink – FAQ</h1>
-    <p>Some answers to frequently asked questions.</p>
+    <img src="/images/xink-mark.png" alt="x.ink Logo" />
+    <h1>Frequently Asked Questions</h1>
+    <p>
+        Find answers to common questions about using x.ink with your Shopify
+        store
+    </p>
 </section>
 
-<section class="legal-content">
-    <div class="container">
-        <div class="legal-section" data-aos="fade-up">
+<div class="faq-container">
+    <div class="faq-toc" data-aos="fade-up">
+        <h3>Quick Navigation</h3>
+        <ul>
+            <li><a href="#general">✅ General</a></li>
+            <li><a href="#syncing">🔁 Syncing</a></li>
+            <li><a href="#payments">💳 Payments & Refunds</a></li>
+            <li><a href="#accounting">💼 Accounting & Tax</a></li>
+            <li><a href="#setup">🛠️ Setup & Support</a></li>
+        </ul>
+    </div>
+
+    <div class="legal-section" data-aos="fade-up">
+        <p>
+            We know accounting is important to your business and we know x.ink
+            is not perfect. Hopefully this page will help you find some of the
+            answers you may have.
+        </p>
+        <p>
+            If there's anything else we can help with, please
+            <a href="mailto:inkapps.tom@gmail.com">get in touch</a>.
+        </p>
+    </div>
+
+    <div class="faq-section" data-aos="fade-up">
+        <h2 id="general">✅ General</h2>
+
+        <div class="faq-item">
+            <h3>What does the app do?</h3>
             <p>
-                We know accounting is important to your business and we know
-                x.ink is not perfect. Hopefully this page will help you find
-                some of the answers you may have.
-            </p>
-            <p>
-                If there's anything else we can help with, please
-                <a href="mailto:inkapps.tom@gmail.com">get in touch</a>.
+                Our app syncs your Shopify orders and transactions directly into
+                Xero — automatically and accurately. It creates Xero invoices,
+                applies payments, handles refunds, discounts, and covers all
+                common payment types.
             </p>
         </div>
 
-        <div class="legal-section" data-aos="fade-up">
-            <h2>Does x.ink offer a free trial?</h2>
+        <div class="faq-item">
+            <h3>Who is this app for?</h3>
             <p>
-                Yes, we offer a free 90 day trial for businesses operating in
-                Australia. Simply install the app and start using it.
+                It's built for Australian Shopify store owners who want to keep
+                their accounting clean, simple, and automated with Xero.
+            </p>
+        </div>
+
+        <div class="faq-item">
+            <h3>Do I need to be tech-savvy to use it?</h3>
+            <p>
+                Not at all! Setup takes just a few minutes, and we
+                <a href="/xink/getting-started">guide you through every step</a
+                >.
             </p>
         </div>
     </div>
-</section>
+
+    <div class="faq-section" data-aos="fade-up">
+        <h2 id="syncing">🔁 Syncing</h2>
+
+        <div class="faq-item">
+            <h3>How often does the app sync?</h3>
+            <p>
+                The app syncs in near real-time. Your Shopify orders and
+                transactions show up in Xero shortly after they're processed.
+            </p>
+        </div>
+
+        <div class="faq-item">
+            <h3>Can I sync past (historical) orders?</h3>
+            <p>
+                At the moment, we only sync new orders from the time you install
+                the app onwards. Syncing historical orders is a feature we're
+                working on.
+            </p>
+        </div>
+
+        <div class="faq-item">
+            <h3>Can I choose what gets synced?</h3>
+            <p>
+                Yes. You can configure which transaction types are synced based
+                on the payment method.
+            </p>
+        </div>
+    </div>
+
+    <div class="faq-section" data-aos="fade-up">
+        <h2 id="payments">💳 Payments, Refunds & Discounts</h2>
+
+        <div class="faq-item">
+            <h3>What payment types are supported?</h3>
+            <p>
+                We support all major gateways — Shopify Payments, PayPal,
+                Stripe, Afterpay, and more. You can map each to specific Xero
+                accounts.
+            </p>
+        </div>
+
+        <div class="faq-item">
+            <h3>How are refunds handled?</h3>
+            <p>
+                Refunds processed in Shopify are automatically reflected in Xero
+                as invoice adjustments.
+            </p>
+        </div>
+
+        <div class="faq-item">
+            <h3>Do discounts sync correctly?</h3>
+            <p>
+                Yes. Whether it's a discount on an item or the entire order,
+                it's all accounted for in Xero.
+            </p>
+        </div>
+    </div>
+
+    <div class="faq-section" data-aos="fade-up">
+        <h2 id="accounting">💼 Accounting & Tax</h2>
+
+        <div class="faq-item">
+            <h3>Can I map sales to different Xero accounts?</h3>
+            <p>
+                Definitely. You can map sales, taxes, shipping, and payments to
+                your preferred Xero accounts.
+            </p>
+        </div>
+
+        <div class="faq-item">
+            <h3>Does it support GST and Australian tax settings?</h3>
+            <p>
+                Yes — we're built with Australian tax compliance in mind. GST is
+                synced properly whether your prices are tax-inclusive or
+                exclusive.
+            </p>
+        </div>
+
+        <div class="faq-item">
+            <h3>Do you support multi-currency?</h3>
+            <p>
+                Currently, we support AUD as the primary currency. Other
+                currencies are handled through Shopify and can be converted to
+                AUD before syncing to Xero.
+            </p>
+        </div>
+    </div>
+
+    <div class="faq-section" data-aos="fade-up">
+        <h2 id="setup">🛠️ Setup & Support</h2>
+
+        <div class="faq-item">
+            <h3>Is it easy to set up?</h3>
+            <p>
+                Very. Connect your Shopify store and Xero account, adjust a few
+                settings, and you're good to go.
+            </p>
+        </div>
+
+        <div class="faq-item">
+            <h3>What kind of support do you offer?</h3>
+            <p>
+                Friendly
+                <a href="mailto:inkapps.tom@gmail.com">email support</a> from
+                people who understand both Shopify and Xero. We're here to help
+                if you get stuck.
+            </p>
+        </div>
+
+        <div class="faq-item">
+            <h3>Do you offer a free trial?</h3>
+            <p>
+                Yes — there's a 90 day free trial so you can test the app before
+                subscribing.
+            </p>
+        </div>
+
+        <div class="faq-item">
+            <h3>What happens if I uninstall the app?</h3>
+            <p>
+                Syncing stops immediately, but anything already pushed to Xero
+                remains in your account.
+            </p>
+        </div>
+    </div>
+</div>
