Complete ausp.ink Getting Started page.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
 <section class="apps" id="apps">
     <div class="container">
         <div class="app-card xero" data-aos="fade-up" data-aos-delay="100">
-            <h3>x.ink – Xero Syncs</h3>
+            <h3>x.ink – Xero Integration</h3>
             <p>
                 Sync orders, invoices and payments to Xero in real time, no
                 manual exports required.
